--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ nogo/
 
 # Other files and folders
 .settings/
+__pycache__
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
@@ -17,7 +18,6 @@ favicon.ico
 main.py
 mongoose-3.7.exe
 makecoffie.bat
-.gitignore
 deploy_to_google.sh
 *~
 */*~
